# pyMUZ

./: .gitignore  README.md  clone_240530.py  fastq_240805.py  pyMUZ.yml  pyproject.toml  setup.py  sgRNA_240521.py
MUZ.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
MUZ/biology/: fastq.py  fastq_240805.py
MUZ/general/: plot.py  tidy_240803.py
general/: csv_240520.py
other/: get_JSON_240110 copy.py  web2.py
other/liau/: 3d_clustering.py  KCN_masterfunctions_v6_200406.py  LOESS_1D_clustering.py
other/real/: SDG&E electric usage - cost Windridge - Sheet1.csv  SDG&E electric usage - cost Windridge - cost template .csv  solar.ipynb
other/revise/: 240912_colors.ipynb  240916_cvar.ipynb  stat.py
other/revise/pe/: 240831.ipynb  240902.ipynb  pe.py  pegLIT.py
other/revise/stat/: 240827_stat.ipynb  240828_stat.ipynb  240829_stat.ipynb  240830_stat.ipynb  stat_240826.py  stat_240827.py  stat_240828.py  stat_240830.py
pyMUZ/: config.py  main.py
pyMUZ/bio/: RT_qPCR.py  __init__.py  clone.py  fastq.py  genbank.py  ngs.py  pe.py  pegLIT.py  qPCR.py  transfect.py
pyMUZ/biology/: clone.py
pyMUZ/dat/: __init__.py  bls.py  cosmic.py  cvar.py  ncbi.py
pyMUZ/database/: bls.py
pyMUZ/general/: io.py  web.py
pyMUZ/pyMUZ.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
revise/: get_JSON_240110.py
src/biology/: fastq_240805.py
src/general/: plot_240805.py
