[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python"
version = "0.0.1"
authors = [
  { name = "Marc Zepeda", email = "marczepeda17@gmail.com" }
]
description = "Python code for input/output, data wrangling, and generating plots."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
  "numpy",
  "matplotlib",
  "seaborn",
  "pandas",
  "biopython"
]
